# LakeOS

./: .gitmodules  LICENSE-APACHE  LICENSE-MIT  README.md  aarch64-none-elf.json  x86_64-none-elf.json
console/: .gitignore  Cargo.toml
console/src/: console.rs  gpio.rs
elfloader/: Cargo.toml
futures-rs/futures-io/: Cargo.toml
futures-rs/futures-io/src/: lib.rs
futures-rs/futures-util/src/: lib.rs
futures-rs/futures-util/src/io/: flush.rs  write_all.rs
init_thread/: Cargo.toml  Makefile  aarch64-none-elf.json
init_thread/.cargo/: config.toml
init_thread/src/: console.rs  gpio.rs  lib.rs  main.rs  rt.rs  shell.rs  timer.rs
kernel/: .gdbinit  .gitignore  Cargo.toml  Makefile  aarch64-none-elf.json  layout.ld
kernel/.cargo/: config.toml
kernel/ext/: init.S
kernel/src/: console.rs  cspace.rs  interrupt.rs  lib.rs  macros.rs  main.rs  scheduler.rs  syscall.rs  vspace.rs
kernel/src/arch/: mod.rs
kernel/src/arch/arm/: aarch64.rs  boot.rs  generic_timer.rs  idle.rs  mod.rs  trap.rs  trapframe.rs  vspace.rs
kernel/src/objects/: cnode.rs  endpoint.rs  interrupt.rs  mod.rs  monitor.rs  nullcap.rs  ram.rs  reply.rs  tcb.rs  traits.rs  untyped.rs  vtable.rs
kernel/src/plat/: mod.rs
kernel/src/plat/brcm2837/: interrupt.rs  mod.rs  uart.rs
kernel/src/utils/: mod.rs  percore.rs  tcb_queue.rs
lib/atags/: Cargo.toml
lib/atags/src/: atag.rs  lib.rs  raw.rs
lib/cpio/: Cargo.toml
lib/cpio/examples/: read_cpio.rs
lib/cpio/src/: lib.rs  newc.rs
lib/elf-loader/: Cargo.toml
lib/elf-loader/src/: lib.rs
lib/elfloader/src/: lib.rs
lib/futures-rs/futures-util/: Cargo.toml
lib/futures-rs/futures-util/src/async_await/: mod.rs  select_mod.rs
lib/futures-rs/futures-util/src/io/: close.rs  mod.rs  write.rs  write_fmt.rs
lib/libspaceman/src/: cspace_man.rs  lib.rs  vmspace_man.rs  vspace_man.rs
lib/naive/: Cargo.toml
lib/naive-attributes/: Cargo.toml
lib/naive-attributes/src/: lib.rs
lib/naive/src/: ep_receiver.rs  ep_server.rs  error.rs  ipc.rs  lib.rs  macros.rs  ns.rs  os_str.rs  os_str_bytes.rs  panic.rs  path.rs  process.rs  rt.rs  space_manager.rs  stream.rs  thread.rs  time.rs  utils.rs
lib/naive/src/ep_server/: ep_server.rs  fault_receiver.rs  mod.rs  msg_receiver.rs
lib/naive/src/fs/: file.rs  mod.rs  pwd.rs  read_dir.rs
lib/naive/src/io/: mod.rs  stdio.rs
lib/naive/src/lmp/: channel.rs  listener.rs  mod.rs
lib/naive/src/objects/: cap_slot.rs  capref.rs  cnode.rs  endpoint.rs  identify.rs  interrupt.rs  mod.rs  monitor.rs  ram.rs  reply.rs  tcb.rs  untyped.rs  vtable.rs
lib/naive/src/rpc/: client.rs  message.rs  mod.rs  server.rs  service.rs
lib/naive/src/spaceman/: cspace_man.rs  mod.rs  utspace_man.rs  vmspace_man.rs  vspace_man.rs
lib/naive/src/task/: executor.rs  mod.rs
lib/naive/src/vm_allocator/: linked_list.rs  mod.rs  slab_allocator.rs  vm_manager.rs
lib/pi/: Cargo.toml
lib/pi/src/: common.rs  generic_timer.rs  gpio.rs  interrupt.rs  lib.rs  timer.rs  uart.rs
lib/rustyl4api/: Cargo.toml
lib/rustyl4api/src/: debug_printer.rs  error.rs  fault.rs  init.rs  ipc.rs  lib.rs  objects.rs  process.rs  syscall.rs  thread.rs  utils.rs  vspace.rs
lib/rustyl4api/src/object/: cnode.rs  endpoint.rs  identify.rs  interrupt.rs  mod.rs  monitor.rs  ram.rs  reply.rs  tcb.rs  untyped.rs  vtable.rs
lib/std/src/: alloc.rs  lib.rs  macros.rs  path.rs  process.rs
lib/std/src/io/: buffered.rs  cursor.rs  error.rs
lib/std/src/os/: mod.rs
lib/std/src/os/lakeos/: mod.rs
lib/std/src/sync/: mod.rs
lib/std/src/sys/: mod.rs
lib/std/src/sys/lakeos/: alloc.rs  io.rs  memchr.rs  mod.rs  mutex.rs  stdio.rs  urpc.rs
lib/std/src/sys_common/: mod.rs
lib/vspace/: Cargo.toml
lib/vspace/src/: addr.rs  common.rs  error.rs  lib.rs  mmu.rs  page_table.rs  page_table_entry.rs  permission.rs  utils.rs  vspace.rs
lib/vspace/src/arch/: mod.rs
lib/vspace/src/arch/arm/: mod.rs
libspaceman/: Cargo.toml
libspaceman/src/: cspace_man.rs  lib.rs  utspace_man.rs  vmspace_man.rs  vspace_allocator.rs  vspace_man.rs
libstd/: Cargo.toml
libstd/src/: alloc.rs  error.rs  io.rs  lib.rs  rt.rs  space_manager.rs  utils.rs
libstd/src/collections/: mod.rs
libstd/src/io/: impls.rs  mod.rs  stdio.rs  util.rs
libstd/src/sys/lakeos/: io.rs  mod.rs  space_manager.rs  stdio.rs  urpc.rs
libstd/src/sys/lakeos/vm_allocator/: mod.rs  slab_allocator.rs
libstd/src/sys_common/: mod.rs  remutex.rs
libstd/src/vm_allocator/: mod.rs
naive/: Cargo.toml
naive-attributes/src/: lib.rs
naive/src/: debug_printer.rs  ep_server.rs  lib.rs  panic.rs  process.rs  rt.rs  space_manager.rs  syscall.rs  thread.rs
naive/src/executor/: mod.rs
naive/src/io/: error.rs  mod.rs  stdio.rs
naive/src/lmp/: listener.rs
naive/src/rpc/: client.rs  message.rs  mod.rs  server.rs
naive/src/task/: executor.rs  mod.rs
naive/src/urpc/: listener.rs  mod.rs  stream.rs
naive/src/vm_allocator/: mod.rs  slab_allocator.rs
pi/src/: generic_timer.rs  interrupt.rs  lib.rs  timer.rs  uart.rs
rpi3b/: Cargo.toml  Makefile
rpi3b/src/: lib.rs
rustyl4api/: Cargo.toml
rustyl4api/src/: debug_printer.rs  error.rs  init.rs  ipc.rs  lib.rs  process.rs  syscall.rs  thread.rs  utils.rs  vspace.rs
rustyl4api/src/object/: cnode.rs  endpoint.rs  identify.rs  interrupt.rs  mod.rs  monitor.rs  ram.rs  reply.rs  tcb.rs  untyped.rs  vtable.rs
shell/: Cargo.toml  Makefile
shell/src/: lib.rs  main.rs  shell.rs
tools/bootloader/: .gitignore  Cargo.toml  Makefile  layout.ld
tools/bootloader/.cargo/: config.toml
tools/bootloader/src/: boot.rs  boot_info.rs  console.rs  lib.rs  main.rs  ram_block.rs  uart.rs
userland/: Cargo.toml  aarch64-none-elf.json
userland/console/: Cargo.toml
userland/console/src/: console.rs  gpio.rs  main.rs
userland/init_thread/: Cargo.toml
userland/init_thread/src/: devfs.rs  initfs.rs  main.rs  rootfs.rs  rt.rs
userland/init_thread/src/vfs/: dcache.rs  inode.rs  mod.rs
userland/shell/: Cargo.toml
userland/shell/src/: main.rs  shell.rs
userland/timer/: Cargo.toml
userland/timer/src/: main.rs  timer.rs
(+5 files in other folders)
