[package]
name = "console"
version = "0.1.0"
authors = ["Vincent Hou <vincent.houyi@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustyl4api = { path = "../rustyl4api" }
naive = { path = "../naive" }
pi = { path = "../pi" }
futures-util = { path = "../futures-rs/futures-util", default-features = false, features = ["alloc", "async-await", "async-await-macro", "io"] }
spin = "0.5.2"
async-trait = "0.1.42"
conquer-once = { version = "0.2.0", default-features = false }