[package]
name = "init_thread"
version = "0.1.0"
authors = ["Vincent Hou <vincent.houyi@gmail.com>"]
edition = "2018"

[dependencies]
rustyl4api = { path = "../rustyl4api" }
naive = { path = "../naive" }
pi = { path = "../pi" }
mutex = { git = "https://github.com/vincenthouyi/LakeOS-Mutex" }
hashbrown = "0.8"
futures-util = { path = "../../git_repo/futures-rs/futures-util", default-features = false, features = ["alloc", "async-await", "async-await-macro"] }
conquer-once = { version = "0.2.0", default-features = false }
crossbeam-queue = { version = "0.2.1", default-features = false, features = ["alloc"] }
spin = "0.5.2"
r0 = "1.0.0"