[package]
name = "rustyl4"
version = "0.1.0"
authors = ["vincenthouyi <vincenthouyi@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["staticlib"]

[profile.dev]
panic = "abort"
debug = true

[profile.test]
debug = true

[profile.release]
debug = true
panic = "abort"
lto = true

[unstable]
build-std = ["core", "compiler_builtins"]

[dependencies]
elf_rs = "0.1.2"
rustyl4api = { path = "../rustyl4api" }
num-traits = { version = "0.2", default-features = false }
num-derive = { git = "https://github.com/vincenthouyi/num-derive" }
spin = "0.5.2"
atags = { git = "https://github.com/vincenthouyi/LakeOS-atags" }
pi = { path = "../pi" }
static_assertions = "1.1.0"
