[package]
name = "rustyl4"
version = "0.1.0"
authors = ["vincenthouyi <vincenthouyi@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["staticlib"]

[profile.dev]
panic = "abort"
debug = true

[profile.test]
debug = true

[profile.release]
debug = true
panic = "abort"
lto = true

[unstable]
build-std = ["core", "compiler_builtins"]

[dependencies]
rustyl4api = { path = "../lib/rustyl4api" }
num-traits = { version = "0.2", default-features = false }
num-derive = { git = "https://github.com/vincenthouyi/num-derive" }
spin = "0.5.2"
atags = { git = "https://github.com/vincenthouyi/LakeOS-atags" }
pi = { path = "../lib/pi" }
static_assertions = "1.1.0"
align-data = "0.1.0"
aarch64 = { git = "https://github.com/rcore-os/aarch64" }
elfloader = { path = "../lib/elfloader" }