[package]
name = "rustyl4"
version = "0.1.0"
authors = ["vincenthouyi <vincenthouyi@gmail.com>"]
edition = "2018"

[profile.dev]
panic = "abort"
debug = true

[profile.test]
debug = true

[profile.release]
debug = true
panic = "abort"
lto = true

[unstable]
build-std = ["core", "compiler_builtins"]

[dependencies]
rustyl4api = { path = "../lib/rustyl4api" }
num-traits = { version = "0.2", default-features = false }
num-derive = { git = "https://github.com/vincenthouyi/num-derive" }
spin = "0.5.2"
atags = { path = "../lib/atags" }
pi = { path = "../lib/pi" }
static_assertions = "1.1.0"
align-data = "0.1.0"
elfloader = "0.12.0"
cpio = { path = "../lib/cpio" }
vspace = { path = "../lib/vspace" }
bootloader = { path = "../tools/bootloader" }