[package]
name = "std"
version = "0.1.0"
authors = ["Vincent Hou <vincent.houyi@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["rlib"]

[dependencies]
rustyl4api = { path = "../rustyl4api" }
spin = "0.5.2"
spaceman = { path = "../libspaceman" }
hashbrown = "0.8"
cfg-if = { version = "0.1.8" }
naive = { path = "../naive" }