[package]
name = "naive"
version = "0.1.0"
authors = ["Vincent Hou <vincent.houyi@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["rlib"]

[dependencies]
rustyl4api = { path="../rustyl4api" }
mutex = { git= "https://github.com/vincenthouyi/LakeOS-Mutex" }
spaceman = { path = "../libspaceman" }
elf_rs = "0.1.2"
hashbrown = "0.8"