[package]
name = "naive"
version = "0.1.0"
authors = ["Vincent Hou <vincent.houyi@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["rlib"]

[dependencies]
rustyl4api = { path="../rustyl4api" }
spaceman = { path = "../libspaceman" }
elf_rs = "0.1.2"
hashbrown = "0.8"
spin = "0.5.2"
static_assertions = "1.1.0"
conquer-once = { version = "0.2.0", default-features = false }
crossbeam-queue = { version = "0.2.1", default-features = false, features = ["alloc"] }
futures-util = { path = "../../git_repo/futures-rs/futures-util", default-features = false, features = ["alloc", "async-await", "async-await-macro"] }
naive-attributes = { path = "../naive-attributes" }