[package]
name = "shell"
version = "0.1.0"
authors = ["Vincent Hou <vincent.houyi@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["staticlib"]

[dependencies]
rustyl4api = { path = "../rustyl4api" }
std = { path = "../libstd" }

[profile.release]
#debug = true
