[package]
name = "naive-attributes"
version = "0.1.0"
authors = ["Vincent Hou <vincent.houyi@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["proc-macro"]

[dependencies]
syn = { version = "1.0", features = ["full"] }
quote = "1.0"