[package]
name = "naive"
version = "0.1.0"
authors = ["Vincent Hou <vincent.houyi@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["rlib"]

[dependencies]
rustyl4api = { path="../rustyl4api" }
hashbrown = "0.8"
spin = "0.5.2"
conquer-once = { version = "0.2.0", default-features = false }
crossbeam-queue = { version = "0.2.1", default-features = false, features = ["alloc"] }
futures-util = { git = "https://github.com/vincenthouyi/futures-rs.git", branch = "lakeos", default-features = false, features = ["alloc", "async-await", "async-await-macro", "io"] }
naive-attributes = { path = "../naive-attributes" }
volatile = "0.4"
r0 = "1.0.0"
elfloader = "0.12.0"
serde = { version = "1.0.118", default-features = false, features = ["alloc", "derive"] }
serde_json = { version = "1.0.60", default-features = false, features = ["alloc"] } 
async-trait = "0.1.42"
num-traits = { version = "0.2", default-features = false }
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }