[package]
name = "bootloader"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
spin = "0.5.2"
pi = { path = "../../lib/pi" }
align-data = "0.1.0"
elfloader = "0.12.0"
atags = { path = "../../lib/atags" }
vspace = { path = "../../lib/vspace" }
cpio = { path = "../../lib/cpio" }
elf_rs = { git = "https://github.com/vincenthouyi/elf_rs" }
elf-loader = { path = "../../lib/elf-loader" }
log = "0.4.14"