[package]
name = "init_thread"
version = "0.1.0"
authors = ["Vincent Hou <vincent.houyi@gmail.com>"]
edition = "2018"

[dependencies]
rustyl4api = { path = "../../lib/rustyl4api" }
naive = { path = "../../lib/naive" }
pi = { path = "../../lib/pi" }
hashbrown = "0.8"
futures-util = { git = "https://github.com/vincenthouyi/futures-rs.git", branch = "lakeos", default-features = false, features = ["alloc", "async-await", "async-await-macro", "io"] }
conquer-once = { version = "0.2.0", default-features = false }
crossbeam-queue = { version = "0.2.1", default-features = false, features = ["alloc"] }
spin = "0.5.2"
r0 = "1.0.0"
async-trait = "0.1.42"
cpio = { path = "../../lib/cpio" }
# std = { path = "../../lib/std" }