[package]
name = "shell"
version = "0.1.0"
authors = ["Vincent Hou <vincent.houyi@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustyl4api = { path = "../../lib/rustyl4api" }
naive = { path = "../../lib/naive" }
conquer-once = { version = "0.2.0", default-features = false }