[package]
name = "shell"
version = "0.1.0"
authors = ["Vincent Hou <vincent.houyi@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustyl4api = { path = "../../lib/rustyl4api" }
naive = { path = "../../lib/naive" }
conquer-once = { version = "0.3", default-features = false }
spin = "0.5.2"
futures-util = { git = "https://github.com/vincenthouyi/futures-rs.git", branch = "lakeos", default-features = false, features = [
    "alloc",
    "async-await",
    "async-await-macro",
    "io",
] }
log = "0.4.14"
