[package]
name = "timer"
version = "0.1.0"
authors = ["Vincent Hou <vincent.houyi@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustyl4api = { path = "../../lib/rustyl4api" }
naive = { path = "../../lib/naive" }
pi = { path = "../../lib/pi" }
futures-util = { git = "https://github.com/vincenthouyi/futures-rs.git", branch = "lakeos", default-features = false, features = [
    "alloc",
    "async-await",
    "async-await-macro",
    "io",
] }
spin = "0.5.2"
async-trait = "0.1.42"
conquer-once = { version = "0.3", default-features = false }
log = "0.4.14"
